2010-06-07  Sebastien Pouliot  <sebastien@ximian.com>

	* ParameterNamesShouldMatchOverridenMethodRule.cs: Avoid string 
	allocations when comparing strings. Saves more than 400kb on
	self-test

2010-06-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepNamespaceHierarchyRule.cs:
	* DetectNonAlphaNumericsInTypeNamesRule.cs:
	* UseCorrectCasingRule.cs:
	* UsePreferredTermsRule.cs:
		Use a unique NamespaceDefinition (not a new one each time)
		when reporting a defect on a namespace

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Apply AvoidUnnecessarySpecializationRule

2010-04-17  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingRule.cs: With newer CSC (e.g. 10.0) we cannot 
	assume the event accessor to be auto-generated by the presence 
	of IsSynchronized. Fix unit test when compiled with CSC

2010-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule
	* AvoidRedundancyInTypeNameRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule
	* AvoidTypeInterfaceInconsistencyRule.cs: Apply AvoidRepetitive
	CallsToPropertiesRule
	* DoNotPrefixEventsWithAfterOrBeforeRule.cs: Apply AvoidRepetitive
	CallsToPropertiesRule
	* ParameterNamesShouldMatchOverridenMethodRule.cs: Apply Avoid
	RepetitiveCallsTo: Apply AvoidRepetitiveCallsTo
	PropertiesRulePropertiesRule
	* UseCorrectCasingRule.cs: Apply AvoidRepetitiveCallsToPropertiesRule
	* UseCorrectPrefixRule.cs: Apply AvoidRepetitiveCallsToPropertiesRule
	* UseCorrectSuffixRule.cs: Apply PreferEmptyInstanceOverNullRule

2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidTypeInterfaceInconsistencyRule.cs: Avoid boxing when 
	concatenating strings
	* UseCorrectCasingRule.cs: Avoid boxing when concatenating 
	strings

2010-01-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Use new IsRef rock
