@@ -1,3 +1,8 @@
+2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* UseCorrectPrefixRule.cs: Make sure types do not start with an I
+	unless acronyms are used
+
 2010-06-07  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ParameterNamesShouldMatchOverridenMethodRule.cs: Avoid string 
